--- a/src/assets/styles/argon-dashboard-react.css
+++ b/src/assets/styles/argon-dashboard-react.css
@@ -91,9 +91,9 @@ body {
   font-size: 1rem;
   font-weight: 400;
   line-height: 1.5;
-  color: #525f7f;
+  color: #ffffff;
   text-align: left;
-  background-color: #f8f9fe;
+  background-color: #1f1f1f;
 }
 
 [tabindex='-1']:focus {
@@ -5575,7 +5575,8 @@ button.close {
   flex-direction: column;
   width: 100%;
   pointer-events: auto;
-  background-color: #fff;
+  background-color: #1f1f1f;
+  color: #ffffff;
   background-clip: padding-box;
   border: 0 solid rgba(0, 0, 0, 0.2);
   border-radius: 0.4375rem;
@@ -5616,6 +5617,7 @@ button.close {
 .modal-title {
   margin-bottom: 0;
   line-height: 1.1;
+  color: #ffffff;
 }
 
 .modal-body {
